[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bananabread-emb"
version = "0.5.2"
description = "A way to slip MixedBread's reranker and embedder into a lot of places it doesn't belong."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Prolix Creates", email = "info@prolix.dev"},
]
maintainers = [
    {name = "Prolix Creates", email = "info@prolix.dev"},
]
keywords = ["ai", "embeddings", "reranking", "mixedbread", "fastapi", "ml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
]

dependencies = [
    # Web framework and server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    
    # Machine learning and AI
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.0",
    "mxbai-rerank>=0.1.0",
    
    # System and utilities
    "psutil>=5.9.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/prolix-oc/bananabread-emb"
Documentation = "https://github.com/prolix-oc/bananabread-emb#readme"
Repository = "https://github.com/prolix-oc/bananabread-emb.git"
Issues = "https://github.com/prolix-oc/bananabread-emb/issues"

[project.scripts]
bananabread-emb = "server:main"

[tool.setuptools]
py-modules = ["server"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
