[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bananabread-emb"
version = "0.6.0"
description = "A way to slip MixedBread's reranker and embedder into a lot of places it doesn't belong."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Prolix Creates", email = "info@prolix.dev"},
]
maintainers = [
    {name = "Prolix Creates", email = "info@prolix.dev"},
]
keywords = ["ai", "embeddings", "reranking", "mixedbread", "fastapi", "ml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
]

dependencies = [
    # Web framework and server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    
    # Machine learning and AI
    "torch>=2.9.0,<2.10.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.0",
    "mxbai-rerank>=0.1.0",
    "flash-attn",
    
    # System and utilities
    "psutil>=5.9.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/prolix-oc/bananabread-emb"
Documentation = "https://github.com/prolix-oc/bananabread-emb#readme"
Repository = "https://github.com/prolix-oc/bananabread-emb.git"
Issues = "https://github.com/prolix-oc/bananabread-emb/issues"

[project.scripts]
bananabread-emb = "bananabread.main:main"

[tool.setuptools]
packages = ["bananabread"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu130"]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
flash-attn = [
    { url = "https://huggingface.co/ussoewwin/Flash-Attention-2_for_Windows/resolve/main/flash_attn-2.8.3+cu130torch2.9.1cxx11abiTRUE-cp313-cp313-win_amd64.whl", marker = "sys_platform == 'win32' and python_version == '3.13'" },
    { url = "https://huggingface.co/ussoewwin/Flash-Attention-2_for_Windows/resolve/main/flash_attn-2.8.3+cu130torch2.9.1cxx11abiTRUE-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32' and python_version == '3.12'" },
    { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.5.4/flash_attn-2.8.3+cu130torch2.9-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.12'" },
]
